.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Tag__c.object
<CustomObject>
    <fields>
        <fullName>sked__Expiry_Date__c</fullName>
        <description>Date after which the resource will no longer be considered to have this &quot;Tag&quot; (where &quot;Tag&quot; may be a Certification)</description>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipName>ResourceTags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>sked__Tag__c</referenceTo>
        <relationshipName>ResourceTags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Resource Tag</label>
    <nameField>
        <displayFormat>RT-{0}</displayFormat>
        <label>ResourceTag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>